--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,31 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React App</title>
     <style>
+      @media (max-width:1225px) {
+        .screen-small{
+          width: 100%;
+          height: 100vh;
+          position: absolute;
+          background-color: black;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: center;
+        }
+      }
       body{
         margin: 0;
         padding: 0;
         background-color: #fffce6;
       }
+      .screen-small{
+        display: none;
+      }
     </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+    </div>
   </body>
 </html>
